--- a/_toc.yml
+++ b/_toc.yml
@@ -2,7 +2,8 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: intro
+root: README
 chapters:
+- file: index
 - file: markdown
 - file: notebooks
